# tsl_manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
django_project/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  manage.py  requirements-dev.in  requirements.in
django_project/config/: asgi.py  env.py  env_utils.py  urls.py  wsgi.py
django_project/send_to_db/: main.py
django_project/templates/: base.html  greeting_view.html  new_services.html
django_project/tsl_manager_app/: admin.py  apps.py  choices.py  filters.py  forms.py  models.py  urls.py  views.py
downloader/: .dockerignore  Dockerfile  celery_app.py  celeryconfig.py  main.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tasks.py
nginx/: Dockerfile  default.conf  nginx.conf
pgadmin/: .env.example  config_local.py
postgres/: .env.example
tools/: mypy_runner.py
tsl_manager_database/: .env.example
tsl_manager_django_project/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  manage.py  requirements-dev.txt  requirements.in  requirements.txt
tsl_manager_downloader/: .dockerignore  Dockerfile  celery_app.py  celeryconfig.py  downloader.py  entrypoint.sh  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tasks.py
tsl_manager_nginx/: .dockerignore  Dockerfile  default.conf
tsl_manager_pgadmin/: config_local.py
tsl_manager_project/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  manage.py  requirements-dev.in  requirements.txt
(+89 files in other folders)
