[project]
name = "tsl_manager"
version = "0.1.0"
description = ""
requires-python = ">=3.12"

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
per-file-ignores = ["config/settings/dev.py:F403,F405", "config/settings/prod.py:F403,F405"]
exclude = ["migrations", ".venv", "venv"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
mypy_path = ["."]
#mypy_path = ["django_project"]
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
ignore_missing_imports = true
exclude = ["migrations"]
explicit_package_bases = true

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.pip-tools]
generate-hashes = false

[tool.pip-tools.compile]
quiet = true